name:                unhal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/proger/unhal#readme
license:             BSD3
license-file:        LICENSE
author:              Vlad Ki
maintainer:          proger@hackndev.com
copyright:           2015 Vlad Ki
category:            Cloud
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       amazonka-core
                     , base >= 4.7 && < 5
                     , containers
                     , filepath
                     , haskell-src-exts
                     , language-java
                     , lens
                     , mtl
                     , pretty-show
                     , safe
                     , semigroups
                     , servant
                     , servant
                     , servant-client
                     , servant-mock
                     , servant-server
  default-language:    Haskell2010

executable unhal-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , unhal
  default-language:    Haskell2010

test-suite unhal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , unhal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/proger/unhal
